Update gRPC Slide API
