# swagger/api.swagger.json
@@ -159,13 +159,13 @@
         "tags": [
           "SlideAPI"
         ],
-        "summary": "Creates a new slide",
-        "operationId": "SlideAPI_CreateSlideV1",
+        "summary": "Updates a slide",
+        "operationId": "SlideAPI_UpdateSlideV1",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/apiCreateSlideV1Response"
+              "$ref": "#/definitions/apiUpdateSlideV1Response"
             }
           },
           "default": {
@@ -274,6 +274,27 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "SlideAPI"
+        ],
+        "summary": "Creates new slides",
+        "operationId": "SlideAPI_MultiCreateSlidesV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiMultiCreateSlidesV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        }
       }
     }
   },
@@ -343,6 +364,15 @@
         }
       }
     },
+    "apiMultiCreateSlidesV1Response": {
+      "type": "object",
+      "properties": {
+        "number_of_created_slides": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
     "apiNewPresentation": {
       "type": "object",
       "properties": {
@@ -359,6 +389,22 @@
         "user_id": {
           "type": "string",
           "format": "uint64"
+        }
+      }
+    },
+    "apiNewSlide": {
+      "type": "object",
+      "properties": {
+        "number": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "presentation_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "type": {
+          "$ref": "#/definitions/apiSlideType"
         }
       }
     },
@@ -432,6 +478,14 @@
       ]
     },
     "apiUpdatePresentationV1Response": {
+      "type": "object",
+      "properties": {
+        "found": {
+          "type": "boolean"
+        }
+      }
+    },
+    "apiUpdateSlideV1Response": {
       "type": "object",
       "properties": {
         "found": {
